# website

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  index.html  tailwind.config.js
.github/workflows/: deploy.yml  sync-submodule.yml
assets/: index.scss  robots.txt
assets/prism/: prism.js
src/: api_stats.rs  content.rs  github_stats.rs  layout.rs  main.rs  server_component.rs  shell.rs  utils.rs
src/pages/: book.rs  index.rs  mod.rs  not_found.rs  post.rs
