[package]
name = "sycamore-website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", default-features = false, features = ["http"] }
sycamore = { version = "0.9.0-beta.4", features = ["hydrate", "suspense"] }
sycamore-router = "0.9.0-beta.4"
web-sys = { version = "0.3.72", features = ["HtmlTemplateElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mdsycx = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[patch.crates-io]
mdsycx = { git = "https://github.com/lukechu10/mdsycx", rev = "1a0786a" }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "9f06fd5" }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore", rev = "9f06fd5" }
